added images and completed unit testing

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app='FashionRetailer'>
 	<head>
 		<meta charset="utf-8">
-		<title>Finest Fashion</title>
+		<title>First Fashion</title>
 		<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
 		<link rel="stylesheet" href="assets/stylesheets/index.css">
 
