changed html elements to directive elements

--- a/index.html
+++ b/index.html
@@ -22,18 +22,17 @@
 
 	<body ng-controller="PageController as pageCtrl">
 		
-		<header navbar ></header>
+		<navbar></navbar>
 		
 		<div ng-controller="BasketController as basketCtrl">
 
-			<div flash-messages ></div>
-			<section basket ></section> 
-
+			<flash-messages></flash-messages>
+			<basket></basket> 
 		</div>
 		
-		<section top-section ></section>
+		<top-section></top-section>
 
-		<section products ></section>
+		<products></products>
 
 	</body>
 <html>
