--- a/index.html
+++ b/index.html
@@ -1,38 +1,32 @@
 <!doctype html>
-<html lang="en" ng-app='FashionRetailer'>
+<html lang="en" ng-app='Atlantic'>
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-		<title>First Fashion</title>
+		<title>atlantic</title>
 		<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
 		<link rel="stylesheet" href="assets/stylesheets/index.css">
 
 		<script src="bower_components/jquery/dist/jquery.js"></script>
 		<script src="bower_components/angular/angular.js"></script>
 		<script src="bower_components/angular-resource/angular-resource.js"></script>
+		<script src="bower_components/angular-route/angular-route.js"></script>
+
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
 		<script src="app/app.js"></script>
-		<script src="app/controllers/pageController.js"></script>
-		<script src="app/controllers/basketController.js"></script>
-		<script src="app/services/shoppingBasketService.js"></script>
-		<script src="app/factories/resourceFactory.js"></script>
-		<script src="app/directives/directives.js"></script>
+		<script src="app/controllers/aboutUsController.js"></script>
+		<script src="app/directives/aboutUsDirectives.js"></script>
+		<script src="app/directives/indexDirectives.js"></script>
 	</head>
 
-	<body ng-controller="PageController as pageCtrl">
+	<body>
 		
 		<navbar></navbar>
 		
-		<div ng-controller="BasketController as basketCtrl">
+		<div ng-view></div>
 
-			<flash-messages></flash-messages>
-			<basket></basket> 
-		</div>
-		
-		<top-section></top-section>
-
-		<products></products>
+		<footer></footer>
 
 	</body>
 <html>
