--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<title>atlantic</title>
 		<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
 		<link rel="stylesheet" href="assets/stylesheets/index.css">
+		<link rel="stylesheet" href="assets/stylesheets/aboutUs.css">
 
 		<script src="bower_components/jquery/dist/jquery.js"></script>
 		<script src="bower_components/angular/angular.js"></script>
