added dropdown menu for quick links to team and clients and removed variables from controller, added factory to pull in about us info from flat files

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
 		<script src="app/app.js"></script>
+		<script src="app/factories/resourceFactory.js"></script>
 		<script src="app/controllers/aboutUsController.js"></script>
 		<script src="app/directives/aboutUsDirectives.js"></script>
 		<script src="app/directives/indexDirectives.js"></script>
